peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/Remarketer_Matrix_Obj__c.object-meta.xml
<CustomObject>
    <label>Remarketer Matrix</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remarketer Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>