peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.State__c</field>
            <operation>equals</operation>
            <valueField>County__c.State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Remarketer Matrix</relationshipLabel>
    <relationshipName>Remarketer_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>