peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/Equipment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Subtype__c</fullName>
    <label>Equipment Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment_Sub_Category</valueSetName>
    </valueSet>
</CustomField>