peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment_Type</valueSetName>
    </valueSet>
</CustomField>