peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Remarketer Matrix</relationshipLabel>
    <relationshipName>Remarketer_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>