peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/Return_Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Warehouse_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Warehouse Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>