peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remarketer Matrix</relationshipLabel>
    <relationshipName>Remarketer_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>