peac_dev/force-app/main/default/objects/Remarketer_Matrix_Obj__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Return_Warehouse_Code__c</columns>
    <columns>Equipment_Subtype__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Location__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>